Saving Changes to Server

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,8 +39,12 @@
     </p>
   </mat-card-content>
 </mat-card>
-<div [hidden]="promotion">
+<div [hidden]="promotion || promoErrMess">
   <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
+<div fxFlex *ngIf="promoErrMess">
+  <h2>Error</h2>
+  <h4>{{promoErrMess}}</h4>
 </div>
 
 <mat-card *ngIf="leader" fxFlex>
@@ -58,7 +62,11 @@
   </mat-card-content>
 </mat-card>
 
-<div [hidden]="leader">
+<div [hidden]="leader || leaderErrMess">
   <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
+<div fxFlex *ngIf="leaderErrMess">
+  <h2>Error</h2>
+  <h4>{{leaderErrMess}}</h4>
 </div>
 </div>
