--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -61,7 +61,7 @@
             fxLayoutGap="10px">
         <mat-list fxFlex>
             <mat-list-item *ngFor="let leader of leaders">
-            <img matListAvatar src={{leader.image}} alt={{leader.name}}>
+            <img matListAvatar src="{{baseURL + leader.image}}" alt={{leader.name}}>
             <h1 matLine> {{leader.name}} {{leader.abbr}} </h1>
             <p matLine><span> {{leader.designation}} </span></p>
             <p matLine><span> {{leader.description}} </span></p>
@@ -70,7 +70,12 @@
 
         </div>
     </div>
-    <div [hidden]="leaders">
+    <div [hidden]="leaders || errMess">
       <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
     </div>
+    <div fxFlex *ngIf="errMess">
+      <h2>Error</h2>
+      <h4>{{errMess}}</h4>
+    </div>
+    
 </div>
