--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -5,7 +5,7 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-    <div fxFlex="40"  *ngIf="dish"  [@visibility]="visibility">
+    <div fxFlex="40"  *ngIf="dish"  [@visibility]="visibility" [@expand]>
         
         <div fxFlex>
             <mat-card>
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div fxFlex="60" *ngIf="dish"  [@visibility]="visibility">
+    <div fxFlex="60" *ngIf="dish"  [@visibility]="visibility" [@expand]>
         <div fxFlex >
             <mat-card>
             <mat-card-header>
